# amplifier-bundle-symphony

./: README.md  bundle.md
agents/: symphony-expert.md  symphony-operator.md
behaviors/: symphony.yaml
context/: symphony-awareness.md
docs/: HARNESS_ENGINEERING.md  HTTP_API.md  ISSUE_LIFECYCLE.md  SYMPHONY_GUIDE.md
docs/plans/: 2026-03-08-symphony-bundle-design.md
modules/tool-symphony/: pyproject.toml
modules/tool-symphony/amplifier_module_tool_symphony/: __init__.py  client.py
recipes/: issue-handoff.yaml  symphony-status-report.yaml  workspace-review.yaml
scripts/: mock_symphony.py
tests/tool-symphony/: conftest.py  test_client.py  test_scaffold.py  test_tool.py
